--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-salut
+<html>
+    <head>
+        <meta charset=utf-8>
+        <title>portfolio</title>
+    </head>
+    <body>
+        <div class="nav-bar">
+            <div class="menu"></div>
+        </div>
+        <div class="container">
+            <div class="miniatures">
+                
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
+    </body>
+</html>
