--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         </div>
         <div class="container">
             <div class="miniatures">
-                
+                <div class="miniature1"></div>
+                <div class="miniature2"></div>
+                <div class="miniature3"></div>
+                <div class="miniature4"></div>
+                <div class="miniature5"></div>
             </div>
         </div>
         <div class="footer">
