--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <div class="miniature3"></div>
                 <div class="miniature4"></div>
                 <div class="miniature5"></div>
+                <div class="miniature6"></div>
             </div>
         </div>
         <div class="footer">
