--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div class="miniature4"></div>
                 <div class="miniature5"></div>
                 <div class="miniature6"></div>
+                <div class="miniature7"></div>
             </div>
         </div>
         <div class="footer">
