--- a/index.html
+++ b/index.html
@@ -8,14 +8,51 @@
             <div class="menu"></div>
         </div>
         <div class="container">
+            <div class="presentation">
+                <h1>Qui sommes nous?</h1>
+                <p>
+                    Expert en développement Web nous travaillons sur différents projets tels que:
+                    <ul>
+                        <li>Conception de sites web</li>
+                        <li>Maintenance logiciel</li>
+                        <li>Mise en place de CRM</li>
+                    </ul>
+                </p>
+            </div>
             <div class="miniatures">
-                <div class="miniature1"></div>
-                <div class="miniature2"></div>
-                <div class="miniature3"></div>
-                <div class="miniature4"></div>
-                <div class="miniature5"></div>
-                <div class="miniature6"></div>
-                <div class="miniature7"></div>
+                <h2>Compétences</h2>
+                <div class="miniature">
+                    <img src="img/angular.jpg" alt="angular">
+                </div>
+                <div class="miniature">
+                    <img src="img/java.png" alt="java">
+                </div>
+                <div class="miniature">
+                    <img src="img/jquery.jpg" alt="">
+                </div>
+                <div class="miniature">
+                    <img src="img/mysql-log.jpg" alt="">
+                </div>
+                <div class="miniature">
+                    <img src="img/node.png" alt="">
+                </div>
+                <div class="miniature">
+                    <img src="img/ocaml.png" alt="">
+                </div>
+                <div class="miniature">
+                    <img src="img/php.jpg" alt="">
+                </div>
+                <h2>Projets</h2>
+                <div class="miniature">
+                    <img src="img/java_project.png" alt=""> 
+                </div>
+                <div class="miniature">
+                    <img src="img/javaee_project.png" alt="">
+                </div>
+                <div class="miniature">
+                    <img src="img/appareils.png" alt="">
+                </div>
+                <div class="miniature"></div>
             </div>
         </div>
         <div class="footer">
