--- a/index.html
+++ b/index.html
@@ -22,34 +22,44 @@
             <div class="miniatures">
                 <h2>Compétences</h2>
                 <div class="miniature">
+                    <h4>Angular</h4>
                     <img src="img/angular.jpg" alt="angular">
                 </div>
                 <div class="miniature">
+                    <h3>java</h3>
                     <img src="img/java.png" alt="java">
                 </div>
                 <div class="miniature">
+                    <h3>jquery</h3>
                     <img src="img/jquery.jpg" alt="">
                 </div>
                 <div class="miniature">
-                    <img src="img/mysql-log.jpg" alt="">
+                    <h3>mysql</h3>
+                    <img src="img/mysql-logo.jpg" alt="">
                 </div>
                 <div class="miniature">
+                    <h3>node</h3>
                     <img src="img/node.png" alt="">
                 </div>
                 <div class="miniature">
+                    <h3>ocaml</h3>
                     <img src="img/ocaml.png" alt="">
                 </div>
                 <div class="miniature">
+                    <h3>php</h3>
                     <img src="img/php.jpg" alt="">
                 </div>
                 <h2>Projets</h2>
                 <div class="miniature">
+                    <h3>java_project</h3>
                     <img src="img/java_project.png" alt=""> 
                 </div>
                 <div class="miniature">
+                    <h3>javaee_project</h3>
                     <img src="img/javaee_project.png" alt="">
                 </div>
                 <div class="miniature">
+                    <h3>appareils_angular_project</h3>
                     <img src="img/appareils.png" alt="">
                 </div>
                 <div class="miniature"></div>
