--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset=utf-8>
         <title>portfolio</title>
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
         <div class="nav-bar">
