--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
         <title>portfolio</title>
         <script type="text/javascript" src="script.js"></script>
     </head>
-    <body>
+    <body>   
         <div class="nav-bar">
-            <div class="menu"></div>
+            <div class="menu" >
+                Menu
+                <div class="options" >
+                    <ul>
+                        <li><a href="">Accueil</a></li>
+                        <li><a href="">Projets</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+
+                </div>
+            </div>
         </div>
         <div class="container">
             <div class="presentation">
