--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset=utf-8>
         <title>portfolio</title>
         <script type="text/javascript" src="script.js"></script>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>   
         <div class="nav-bar">
@@ -33,7 +34,7 @@
             <div class="miniatures">
                 <h2>Compétences</h2>
                 <div class="miniature">
-                    <h4>Angular</h4>
+                    <h3>Angular</h3>
                     <img src="img/angular.jpg" alt="angular">
                 </div>
                 <div class="miniature">
@@ -69,11 +70,7 @@
                     <h3>javaee_project</h3>
                     <img src="img/javaee_project.png" alt="">
                 </div>
-                <div class="miniature">
-                    <h3>appareils_angular_project</h3>
-                    <img src="img/appareils.png" alt="">
-                </div>
-                <div class="miniature"></div>
+              
             </div>
         </div>
         <div class="footer">
