--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="miniature"></div>
             </div>
         </div>
-        <div class="footer">
+        <div class="foot">
 
         </div>
     </body>
